--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,30 +1,20 @@
 image: node:18.7.0
 stages:
   - build
+  - test
   - deploy
 
- cache:
-  paths:
-    - node_modules/
+build-job:
+  stage: build
+  script:
+      - echo "This is build stage"
 
-   build-pages:
-   stage: build
-   script:
-   - rm -rf build
-   - CI=false npm install    
-   - CI=false npm run build    
-   - rm -rf public
-   - cp build/index.html build/404.html
-   - mv build public
+test-job:
+  stage: test
+  script:
+    - echo "This is test stage"
 
-  artifacts:
-  paths:
-   - public 
-
-   pages:
-   stage: deploy
-   script:
-   - ls
-   artifacts:
-   paths:
-   - public
+deploy-job:
+  stage: deploy
+  script:
+    - echo "This is deploy stage"          
